# RETMAP

./: .gitignore  404.html  LICENSE.txt  README.md  config.json  index.html  install.ps1  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: deploy_pages.yml
about/: index.html
adsorpyon/: density.py  input_reader.py  interpreter.py  literature_functions.py  main.py  main2.py  physics.py  saturation_pressure.py  transformer.py  utils.py
adsorpyon/Properties/: Ar.prop  H2.prop  H2O.prop  NH3.prop  argon.prop
contact/: index.html
docs/: about.md  contact.md  index.md  installation.md  license.md  release_notes.md  usage.md
docs/examples/: example_1.md  example_2.md
docs/manual/: characteristic_curves.md  configuration.md  configuration_file.md  density.md  input_data_file.md  predicting_data.md  properties_file.md  saturation_pressure.md  units.md
examples/: saturation_conditions.py  saturation_pressure_optimizer.py  sim-methane-Co-MOF-74-cCO2-115K.load  sim-methane-Co-MOF-74-cCO2-185K.load  sim-methane-Co-MOF-74-cCO2-273K.load  sim-methane-Co-MOF-74-cCO2-300K.load  sim-methane-Co-MOF-74-cCO2-333K.load  sim-methane-Co-MOF-74-cCO2-373K.load  thermal_compression_coefficient.py
examples/example_1/: index.html
examples/example_2/: index.html
examples/run/: config.in  config.json  run.py
examples/run/Input/: CH4.prop  s_sim-methane-ZJU-198-273K.load
examples/run_legacy/: config.in  run_legacy.py
examples/run_legacy/Input/: CH4.prop  s_sim-methane-ZJU-198-300K.load  s_sim-methane-ZJU-198-333K.load  s_sim-methane-ZJU-198-373K.load  sim-methane-ZJU-198-300K.load
examples/saturation_stuff/: sim-CO2-Co-MOF-74-cCO2-saturation_T.load  sim-CO2-IRMOF-1-saturation_T.load  sim-CO2-MIL-47-saturation_T.load  sim-CO2-MOF-1-saturation_T.load  sim-CO2-ZJU-198-LP-saturation_T.load  sim-N2-Co-MOF-74-cCO2-saturation_T.load  sim-N2-IRMOF-1-saturation_T.load  sim-N2-MIL-47-saturation_T.load  sim-N2-MOF-1-saturation_T.load  sim-N2-ZJU-198-LP-saturation_T.load  sim-methane-Co-MOF-74-cCO2-saturation_T.load  sim-methane-IRMOF-1-saturation_T.load  sim-methane-MIL-47-saturation_T.load  sim-methane-MOF-1-saturation_T.load  sim-methane-ZJU-198-LP-saturation_T.load
installation/: index.html
license/: index.html
manual/characteristic_curves/: index.html
manual/configuration_file/: index.html
manual/density/: index.html
manual/input_data_file/: index.html
manual/predicting_data/: index.html
manual/properties_file/: index.html
manual/saturation_pressure/: index.html
manual/units/: index.html
release_notes/: index.html
retmap/: constants.py  density.py  input_reader.py  interpreter.py  main.py  physics.py  saturation_pressure.py
search/: search_index.json
src/: __init__.py  density.py  input_reader.py  interpreter.py  main.py  physics.py  saturation_pressure.py
src/Properties/: CO2.prop  N2.prop  methanol.prop  propane.prop
tests/: compressibility_test.py  density_test.py  peng-robinson.py  psat_test.py  saturation_pressure_test.py  test_density.py
trial_scripts/: main2.py
usage/: index.html
